; ModuleID = '/home/carl/AnghaBench/8cc/extr_cpp.c_try_include.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_cpp.c_try_include.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"%s/%s\00", align 1
@once = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32)* @try_include to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @try_include(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @format(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* %10, i8* %11)
  %13 = call i8* @fullpath(i32 %12)
  store i8* %13, i8** %8, align 8
  %14 = load i32, i32* @once, align 4
  %15 = load i8*, i8** %8, align 8
  %16 = call i64 @map_get(i32 %14, i8* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %42

19:                                               ; preds = %3
  %20 = load i8*, i8** %8, align 8
  %21 = call i64 @guarded(i8* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %19
  store i32 1, i32* %4, align 4
  br label %42

24:                                               ; preds = %19
  %25 = load i8*, i8** %8, align 8
  %26 = call i32* @fopen(i8* %25, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %26, i32** %9, align 8
  %27 = load i32*, i32** %9, align 8
  %28 = icmp ne i32* %27, null
  br i1 %28, label %30, label %29

29:                                               ; preds = %24
  store i32 0, i32* %4, align 4
  br label %42

30:                                               ; preds = %24
  %31 = load i32, i32* %7, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %30
  %34 = load i32, i32* @once, align 4
  %35 = load i8*, i8** %8, align 8
  %36 = call i32 @map_put(i32 %34, i8* %35, i8* inttoptr (i64 1 to i8*))
  br label %37

37:                                               ; preds = %33, %30
  %38 = load i32*, i32** %9, align 8
  %39 = load i8*, i8** %8, align 8
  %40 = call i32 @make_file(i32* %38, i8* %39)
  %41 = call i32 @stream_push(i32 %40)
  store i32 1, i32* %4, align 4
  br label %42

42:                                               ; preds = %37, %29, %23, %18
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local i8* @fullpath(i32) #1

declare dso_local i32 @format(i8*, i8*, i8*) #1

declare dso_local i64 @map_get(i32, i8*) #1

declare dso_local i64 @guarded(i8*) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @map_put(i32, i8*, i8*) #1

declare dso_local i32 @stream_push(i32) #1

declare dso_local i32 @make_file(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
